[gd_scene load_steps=21 format=3 uid="uid://lcggdyvavepu"]

[ext_resource type="Script" uid="uid://chr261hoin4di" path="res://Script/Main.gd" id="1_xhtwi"]
[ext_resource type="PackedScene" uid="uid://bnc5pu0you6on" path="res://Scene/Table.tscn" id="2_g6ejq"]

[sub_resource type="SystemFont" id="SystemFont_xhtwi"]

[sub_resource type="LabelSettings" id="LabelSettings_xhtwi"]
font = SubResource("SystemFont_xhtwi")
font_size = 30

[sub_resource type="SystemFont" id="SystemFont_djkur"]

[sub_resource type="LabelSettings" id="LabelSettings_g6ejq"]
font = SubResource("SystemFont_djkur")
font_size = 30

[sub_resource type="Theme" id="Theme_xhtwi"]

[sub_resource type="SystemFont" id="SystemFont_g6ejq"]

[sub_resource type="SystemFont" id="SystemFont_hueuk"]

[sub_resource type="SystemFont" id="SystemFont_6a8me"]

[sub_resource type="SystemFont" id="SystemFont_yg4ot"]

[sub_resource type="SystemFont" id="SystemFont_vm4ek"]

[sub_resource type="SystemFont" id="SystemFont_mr7am"]

[sub_resource type="SystemFont" id="SystemFont_4qtod"]

[sub_resource type="SystemFont" id="SystemFont_h175a"]

[sub_resource type="LabelSettings" id="LabelSettings_togfq"]
font = SubResource("SystemFont_h175a")
font_size = 24

[sub_resource type="SystemFont" id="SystemFont_togfq"]

[sub_resource type="SystemFont" id="SystemFont_i0sg4"]

[sub_resource type="SystemFont" id="SystemFont_aan6j"]

[sub_resource type="SystemFont" id="SystemFont_h3nmf"]

[node name="Main" type="Node2D"]
script = ExtResource("1_xhtwi")

[node name="HScrollBarSpeed" type="HScrollBar" parent="."]
offset_left = 32.0
offset_top = 704.0
offset_right = 620.0
offset_bottom = 768.0
min_value = 1.0
max_value = 120.0
value = 20.0

[node name="LabelGeneration" type="Label" parent="."]
offset_left = 340.0
offset_top = 640.0
offset_right = 640.0
offset_bottom = 704.0
text = "Generation: 0"
label_settings = SubResource("LabelSettings_xhtwi")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LabelSpeed" type="Label" parent="."]
offset_top = 640.0
offset_right = 200.0
offset_bottom = 704.0
text = "Speed: 20"
label_settings = SubResource("LabelSettings_g6ejq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartStopButton" type="Button" parent="."]
offset_left = 420.0
offset_top = 778.0
offset_right = 620.0
offset_bottom = 842.0
theme = SubResource("Theme_xhtwi")
theme_override_fonts/font = SubResource("SystemFont_g6ejq")
theme_override_font_sizes/font_size = 30
text = "Stop"

[node name="ResetButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 778.0
offset_right = 220.0
offset_bottom = 842.0
theme_override_fonts/font = SubResource("SystemFont_hueuk")
theme_override_font_sizes/font_size = 30
text = "Reset"

[node name="Label" type="Label" parent="."]
offset_left = 35.0
offset_top = 873.0
offset_right = 162.0
offset_bottom = 915.0
theme_override_fonts/font = SubResource("SystemFont_6a8me")
theme_override_font_sizes/font_size = 30
text = "Ant Data"

[node name="AntsEdit" type="LineEdit" parent="."]
offset_left = 20.0
offset_top = 1088.0
offset_right = 620.0
offset_bottom = 1152.0
theme_override_fonts/font = SubResource("SystemFont_yg4ot")
theme_override_font_sizes/font_size = 30
text = "1234567026262626"

[node name="Label2" type="Label" parent="."]
offset_left = 40.0
offset_top = 1006.0
offset_right = 88.0
offset_bottom = 1070.0
theme_override_fonts/font = SubResource("SystemFont_vm4ek")
theme_override_font_sizes/font_size = 30
text = "dir:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DirList" type="OptionButton" parent="."]
offset_left = 100.0
offset_top = 1006.0
offset_right = 266.0
offset_bottom = 1070.0
theme_override_fonts/font = SubResource("SystemFont_mr7am")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
item_count = 8
popup/item_0/text = "North"
popup/item_0/id = 0
popup/item_1/text = "NEast"
popup/item_1/id = 1
popup/item_2/text = "East"
popup/item_2/id = 2
popup/item_3/text = "SEast"
popup/item_3/id = 3
popup/item_4/text = "South"
popup/item_4/id = 4
popup/item_5/text = "SWest"
popup/item_5/id = 5
popup/item_6/text = "West"
popup/item_6/id = 6
popup/item_7/text = "NWest"
popup/item_7/id = 7

[node name="XLabel" type="Label" parent="."]
offset_left = 279.0
offset_top = 1005.0
offset_right = 319.0
offset_bottom = 1069.0
theme_override_fonts/font = SubResource("SystemFont_4qtod")
theme_override_font_sizes/font_size = 30
text = "x:"
label_settings = SubResource("LabelSettings_togfq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="XEdit" type="LineEdit" parent="."]
offset_left = 319.0
offset_top = 1006.0
offset_right = 439.0
offset_bottom = 1070.0
theme_override_fonts/font = SubResource("SystemFont_togfq")
theme_override_font_sizes/font_size = 30
text = "25"
alignment = 1

[node name="YLabel" type="Label" parent="."]
offset_left = 458.0
offset_top = 1006.0
offset_right = 498.0
offset_bottom = 1070.0
theme_override_fonts/font = SubResource("SystemFont_i0sg4")
theme_override_font_sizes/font_size = 30
text = "y:"
label_settings = SubResource("LabelSettings_togfq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="YEdit" type="LineEdit" parent="."]
offset_left = 499.0
offset_top = 1006.0
offset_right = 619.0
offset_bottom = 1070.0
theme_override_fonts/font = SubResource("SystemFont_aan6j")
theme_override_font_sizes/font_size = 30
text = "25"
alignment = 1

[node name="AntsList" type="OptionButton" parent="."]
offset_left = 20.0
offset_top = 924.0
offset_right = 620.0
offset_bottom = 988.0
theme_override_fonts/font = SubResource("SystemFont_h3nmf")
theme_override_font_sizes/font_size = 30
alignment = 1
selected = 0
item_count = 2
popup/item_0/text = "Ant_0"
popup/item_0/id = 0
popup/item_1/text = "Ant_1"
popup/item_1/id = 1

[node name="DeleteButton" type="Button" parent="."]
offset_left = 20.0
offset_top = 1168.0
offset_right = 200.0
offset_bottom = 1232.0
theme = SubResource("Theme_xhtwi")
theme_override_fonts/font = SubResource("SystemFont_g6ejq")
theme_override_font_sizes/font_size = 30
text = "Delete"

[node name="AddButton" type="Button" parent="."]
offset_left = 230.0
offset_top = 1168.0
offset_right = 410.0
offset_bottom = 1232.0
theme = SubResource("Theme_xhtwi")
theme_override_fonts/font = SubResource("SystemFont_g6ejq")
theme_override_font_sizes/font_size = 30
text = "Add"

[node name="EditButton" type="Button" parent="."]
offset_left = 440.0
offset_top = 1168.0
offset_right = 620.0
offset_bottom = 1232.0
theme = SubResource("Theme_xhtwi")
theme_override_fonts/font = SubResource("SystemFont_g6ejq")
theme_override_font_sizes/font_size = 30
text = "Edit
"

[node name="Table" parent="." instance=ExtResource("2_g6ejq")]

[connection signal="value_changed" from="HScrollBarSpeed" to="." method="_on_h_scroll_bar_speed_value_changed"]
[connection signal="pressed" from="StartStopButton" to="." method="_on_start_stop_button_pressed"]
[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
[connection signal="item_selected" from="AntsList" to="." method="_on_ants_list_item_selected"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_delete_button_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="generation_proceeded" from="Table" to="." method="_on_table_generation_proceeded"]
